# suitesparse_vendor

./: CMakeLists.txt  package.xml
cmake/: suitesparse-vendor-extras.cmake.in
